syntax = "proto3";
package index.miner.rpc;

option go_package = "github.com/textileio/powergate/index/miner/rpc";

message Index {
    MetaIndex meta = 1;
    OnChainIndex chain = 2;
}

message OnChainIndex {
    int64 last_updated = 1;
    map<string, OnChainData> miners = 2;
}

message OnChainData {
    uint64 power = 1;
    float relative_power = 2;
    uint64 sector_size = 3;
    uint64 active_deals = 4;
}

message MetaIndex {
    uint32 online = 1;
    uint32 offline = 2;
    map<string, Meta> info = 3;
}

message Meta {
    int64 last_updated = 1;
    string user_agent = 2;
    Location location = 3;
    bool online = 4;
}

message Location {
    string country = 1;
    double longitude = 2;
    double latitude = 3;
}

message GetRequest {
}

message GetResponse {
    Index index = 1;
}

service RPCService {
    rpc Get(GetRequest) returns (GetResponse) {}
}
